Fix broken layout in news page (main_page.php)
- ensure to unset style wherein markdown is enclosing <p> tag around news headline

Fixes #22204

--- a/css/ace-mantis.css
+++ b/css/ace-mantis.css
@@ -428,3 +428,6 @@ i.datetimepicker {
 
 }
 
+#news-items .widget-header p {
+    all: unset;
+}
